[package]
name = "sys_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.11"
rocket = { version =  "0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0"
rocket_prometheus = "0.10.0"
once_cell = "1.2.0"